@@ -11,6 +11,7 @@
   Closes bug #309 (stuck while closing error windows)
 * Be more tolerant of errors whilst fetching options.  Closes bug #313
   (Error retreiving scanner options: error getting option 5: invalid argument)
+* Use default text if the title of a group of scan options is empty.
 
 
 2.1.7 (12.10.2018):
